<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/linear_formTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_formJantung"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/title_formJantung"
            android:textColor="#b20a2c"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textAlignment="gravity"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="102dp"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:id="@+id/label_formDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/label_formDate"
                android:textColor="#b20a2c"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/date_formJantung"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_formJantung"
                android:textColor="#355C7D"
                android:textSize="14dp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linear_formTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/form_image"
                android:layout_width="match_parent"
                android:layout_height="232dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/regis" />

            <TextView
                android:id="@+id/label_diabetes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/label_diabetes"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20dp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radio_diabetes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/diabetesYes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_diabetesYes"
                    android:textColor="#000000"
                    android:onClick="onRadioButtonClicked"/>

                <RadioButton
                    android:id="@+id/diabetesNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_diabetesNo"
                    android:textColor="#000000"
                    android:onClick="onRadioButtonClicked"/>
            </RadioGroup>

            <TextView
                android:id="@+id/label_rokok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/label_rokok"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20dp"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radio_rokok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rokokYes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_rokokYes"
                    android:textColor="#000000"
                    android:onClick="onRadioButtonClicked"/>

                <RadioButton
                    android:id="@+id/rokokNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_rokokNo"
                    android:textColor="#000000"
                    android:onClick="onRadioButtonClicked"/>
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/label_kelamin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:text="@string/label_kelamin"
                    android:textColor="#000000"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/label_usia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="100dp"
                    android:text="@string/label_usia"
                    android:textColor="#000000"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_kelamin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:text="@string/text_kelamin"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/text_usia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="100dp"
                    android:text="@string/text_usia"
                    android:textSize="20dp" />
            </LinearLayout>

            <EditText
                android:id="@+id/text_tensi"
                android:layout_width="wrap_content"
                android:layout_height="47dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/emailregis"
                android:ems="12"
                android:hint="@string/text_tensi"
                android:inputType="number"

                android:paddingLeft="60dp" />

            <TextView
                android:id="@+id/label_kolesterol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/label_kolesterol"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner_kolesterol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="120dp"/>

            <Button
                android:id="@+id/button_hasil"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_rounded"
                android:text="@string/button_hasil"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:onClick="showAlert"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>